refactor: Use OpenRewrite for migration to Spring Boot 3.3